syntax = "proto3";

option csharp_namespace = "DotNet.Grpc.Server.Protos";

package Greet;

service Greeter {
  // Unary RPC
  rpc SayHello (HelloRequest) returns (HelloResponse);

  // Server streaming RPC
  rpc SayHelloServerStreaming(HelloRequest) returns (stream HelloResponse) {}

  // Client streaming RPC
  rpc SayHelloClientStreaming(stream HelloRequest) returns (HelloResponse) {}

  // Bidirectional streming RPC
  rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse) {}
}

// The request message containing a name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
}